Fix - Menu visibility

--- a/widgets/Drawer/Drawer.css
+++ b/widgets/Drawer/Drawer.css
@@ -43,6 +43,7 @@
 .drawerPanelStyle{
     height: 100vh;
     background-color: white;
+    position: fixed !important;
     z-index: 99;
     width: 300px;
 }
@@ -69,7 +70,7 @@
     /* background-color:  #212737; */
     background: rgba(33, 39, 55, 0.6);
     /* opacity: 0.6; */
-    position: absolute !important;
+    position: fixed !important;
     top: 0px !important;
 }
 
