--- a/widgets/Drawer/components/DrawerFooter/DrawerFooter.css
+++ b/widgets/Drawer/components/DrawerFooter/DrawerFooter.css
@@ -104,7 +104,7 @@
 }
 
 .drawerFooterOverlayPanelStyle {
-    position: absolute !important;
+    position: fixed !important;
     bottom: 99px !important;
     left: 34px !important;
     top: auto !important;
